--- a/app/src/main/res/values/config.xml
+++ b/app/src/main/res/values/config.xml
@@ -3,29 +3,29 @@
 
     <!--Watson Assistant service credentials-->
     <!-- REPLACE `ASSISTANT_ID_HERE` with ID of the Assistant to use -->
-    <string name="assistant_id">ASSISTANT_ID_HERE</string>
+    <string name="assistant_id">542292bf-7172-4af8-bc90-9884004f1e92</string>
 
     <!-- REPLACE `ASSISTANT_API_KEY_HERE` with Watson Assistant service API Key-->
-    <string name="assistant_apikey">ASSISTANT_API_KEY_HERE</string>
+    <string name="assistant_apikey">YhX5TQIMHrkd29igyqeRpUiy_HyQZMqpSUzw0ADXxz_3</string>
 
     <!-- REPLACE the URL with the one provided in the credentials of the service you created-->
-    <string name="assistant_url">ASSISTANT_URL_HERE</string>
+    <string name="assistant_url">https://api.us-south.assistant.watson.cloud.ibm.com/instances/27c26f46-ac19-4208-9e99-029ca3cd5194</string>
 
 
     <!--Watson Speech To Text(STT) service credentials-->
     <!-- REPLACE `STT_API_KEY_HERE` with Watson Speech to Text service API Key-->
-    <string name="STT_apikey">STT_API_KEY_HERE</string>
+    <string name="STT_apikey">ZGrPYYTc7zpacUuUtXkhwGusFf5HhJKFygtecfSQJHkw</string>
     
 
     <!-- REPLACE the URL with STT URL provided in the service credentials -->
-    <string name="STT_url">STT_URL_HERE</string>
+    <string name="STT_url">https://api.us-south.speech-to-text.watson.cloud.ibm.com/instances/e8691a6a-6da0-4b90-bd30-ab7ef726a0cd</string>
 
 
     <!--Watson Text To Speech(TTS) service credentials-->
     <!-- REPLACE `TTS_API_KEY_HERE` with Watson Text to Speech service API Key-->
-    <string name="TTS_apikey">TTS_API_KEY_HERE</string>
+    <string name="TTS_apikey">gNuosOlAkLhp3ql-VtFTtg5wm-Frv-QD5kIxFGwNTUkz</string>
     
     <!-- REPLACE the URL with TTS URL provided in the service credentials -->
-    <string name="TTS_url">TTS_URL_HERE</string>
+    <string name="TTS_url">https://api.us-south.text-to-speech.watson.cloud.ibm.com/instances/451dd73c-3a66-4412-b7a9-4d83ca5979b2</string>
 
 </resources>
